 * Lua API:
   * location_set.of_pairs() now can take coordinates defined by x/y= keys as well
 * User interface:
   * Added notification support for Windows
   * Made it so that the "Back to Turn X" and "Back to Start" menu items work
     with .bz2 saves
 * Miscellaneous and bug fixes
   * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
     in alphabetical order

Version 1.11.4:
 * AI:
   * Reverted new Lua AI persistent storage mechanism for external CAs that
     would crash Wesnoth under certain circumstances in 1.11.3. This will be
     re-committed in an upcoming release.
   * Micro AIs
     * Healer Support MAI now respects RCA AI [avoid] aspect.

Version 1.11.3:
 * AI:
   * Micro AIs
     * New Goto and Zone Guardian MAIs
     * Change SUF/SLF names to [filter]/[filter_location] and variants thereof
     * Add optional SUF to Healer Support MAI
 * Campaigns:
   * Descend into Darkness:
     * Fix the surviving orc leader starting poisoned after scenario 5.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Indonesian, Italian, Polish,
     Portuguese, Russian, Vietnamese
 * User interface:
   * Fixed 'end turn' button's state in MP and title2 issues.
   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
     text box overflow occurs.
   * Change Difficulty checkbox in Load Game dialog in GUI1 gets disabled if
     change in difficulty of a loading game won't take effect (bug #20381).
   * Fixed 'end turn' button's state issue: button stays disabled after the first turn.
   * Fixed bug #20592: dialog (wml_message.cfg) is shifted by the
     distance between the left edge of the screen and the game map
   * Overhaul of the editor's gui
 * WML engine:
   * Fixed invalid memory access issues caused by subnamespaced persistent WML
     variables (bug #20385).
   * fix negative gold carried over (bug #20676)