@@ -19,6 +19,7 @@ Version 1.11.4+dev:
  * Miscellaneous and bug fixes
    * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
      in alphabetical order
+   * Added -Wno-null-conversion to the CMake pedantic flags.
 
 Version 1.11.4:
  * AI:
